--- a/java_basic_examples/hello_area_description/build.gradle
+++ b/java_basic_examples/hello_area_description/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "21.1.2"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.projecttango.examples.java.helloareadescription"
@@ -27,5 +27,7 @@ android {
 dependencies {
     apply from: '../../version.gradle'
     compile "com.google.tango:sdk-base:${release_version}"
+    compile "com.google.tango:sdk-support:${release_version}"
+    compile "com.google.tango:sdk-reconstruction:${release_version}"
     compile "com.android.support:appcompat-v7:23.2.0"
 }
